added academic info

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     <p class="text-white-50">
                         A neuroscientist and researcher by training, I'm passionate about working at the nexus of Data Science and Neural Systems.
                         Currently, I'm working on continuing the research from my MSc with the Institute of Neuroinformatics.
-                        For a short summary of my academic work, check out my <a href="docs/Independent_Study_Proposal.pdf">Bachelor's thesis proposal</a> and
+                        For a short summary of my academic work, check out my <a href="docs/Independent_Study_Proposal.pdf">Bachelor's thesis proposal</a> from New York University and
                         the <a href="https://www.nature.com/articles/s41593-019-0568-z">report</a> we published in Nature Neuroscience for that project,
-                        and an abstract of my <a href="docs/GastoneGuilabert_Alexandra_Abstract_SSN2019.pdf">Master's thesis</a>.
+                        and an abstract of my <a href="docs/GastoneGuilabert_Alexandra_Abstract_SSN2019.pdf">Master's thesis</a> in ETH Zürich and University of Zürich for the Swiss Society of Neuroscience 2019 Annual Meeting.
                     </p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
                         <h4>Simulation of Cortical Neurons</h4>
-                        <p class="text-black-50 mb-0">MSc Thesis: Synaptic background activity and short-term plasticity optimize synaptic information transfer between Layer 2/3 cortical neurons.</p>
+                        <p class="text-black-50 mb-0">MSc Thesis with ETH Zürich and University of Zürich: Synaptic background activity and short-term plasticity optimize synaptic information transfer between Layer 2/3 cortical neurons.</p>
                     </div>
                 </div>
             </div>
@@ -151,6 +151,7 @@
                                 <h4 class="text-white">Simulations of Auditory, Visual, and Vestibular Sensory Systems</h4>
                                 <p class="mb-0 text-white-50">
                                     Computer simulations of a cochlear implant, a retinal implant, and a vestibular implant (see <a href="https://github.com/alexgastone/simulations_sensory_systems">Github repo</a>).
+                                    Completed in collaboration with colleagues from ETH Zürich.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
                             </div>
