added dashboard and edits to about section

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <h2 class="text-white mb-4">About</h2>
                     <p class="text-white-50">
                         A neuroscientist and researcher by training, I'm passionate about working at the nexus of Data Science and Neural Systems.
-                        Currently, I'm working on continuing the research from my MSc with the Institute of Neuroinformatics.
-                        For a short summary of my academic work, check out my <a href="docs/Independent_Study_Proposal.pdf">Bachelor's thesis proposal</a> from New York University and
+                        Currently, I'm continuing the research from my MSc studies with the Institute of Neuroinformatics, and working on other Machine Learning projects on my own time.
+                        For a look at some of my academic work, check out my <a href="docs/Independent_Study_Proposal.pdf">Bachelor's thesis proposal</a> from New York University along with
                         the <a href="https://www.nature.com/articles/s41593-019-0568-z">report</a> we published in Nature Neuroscience for that project,
                         and an abstract of my <a href="docs/GastoneGuilabert_Alexandra_Abstract_SSN2019.pdf">Master's thesis</a> in ETH Zürich and University of Zürich for the Swiss Society of Neuroscience 2019 Annual Meeting.
                     </p>
@@ -109,7 +109,8 @@
                                 <h4 class="text-white">Recommender System and Sentiment Analysis for Aibrnb</h4>
                                 <p class="mb-0 text-white-50">
                                     Built a system than generates personalised recommendations for Airbnb users based on sentiment polarity of their and other users' comments.
-                                    For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my article on Medium, or this dashboard I created on estimated sentiment polarity data.
+                                    For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my article on Medium, or this
+                                    <a href="https://airbnb-bos-polarity.herokuapp.com/">dashboard</a> I created with <i>Streamlit</i> (deployed on <i>Heroku</i>) on estimated sentiment polarity data.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
                             </div>
@@ -129,7 +130,7 @@
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Anomaly Detection of Lorenz Attractor model data</h4>
                                 <p class="mb-0 text-white-50">
-                                    Trained a feed forward neural net (using Tensorflow) on extracted frequency spectrum to detect anomalous data (see <a href="https://github.com/alexgastone/ML_projects/blob/master/AnomalyDetection.ipynb">Github repo</a>).
+                                    Trained a feed forward neural net (using <i>Tensorflow</i>) on extracted frequency spectrum to detect anomalous data (see <a href="https://github.com/alexgastone/ML_projects/blob/master/AnomalyDetection.ipynb">Github repo</a>).
                                     Will be extended in future to work for unsupervised anomaly detection problems using an autoencoder trained with an LSTM.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 mr-0">
