added medium link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <h4 class="text-white">Recommender System and Sentiment Analysis for Aibrnb</h4>
                                 <p class="mb-0 text-white-50">
                                     Built a system than generates personalised recommendations for Airbnb users based on sentiment polarity of their and other users' comments.
-                                    For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my article on Medium, or this
+                                    For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my <a href="https://medium.com/@alexandra.gg150/how-to-build-a-recommender-system-for-airbnb-in-python-3a92ad500fa5">article on Medium</a>, or this
                                     <a href="https://airbnb-bos-polarity.herokuapp.com/">dashboard</a> I created with <i>Streamlit</i> (deployed on <i>Heroku</i>) on estimated sentiment polarity data.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
