added tweet project

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </p>
                 </div>
             </div>
-            <img src="img/ipad.png" class="img-fluid" alt="">
+            <img src="img/ipad.png" class="img-fluid" alt="hippocampus_cell_nuclei">
         </div>
     </section>
 
@@ -97,8 +97,8 @@
                 </div>
             </div>
 
-            <!-- Project One Row -->
-            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+            <!-- Project One Row, removed bottom margin mb-5 from div class in line below-->
+            <div class="row justify-content-center no-gutters mb-lg-0">
                 <div class="col-lg-6">
                     <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
                 </div>
@@ -108,8 +108,8 @@
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Recommender System and Sentiment Analysis for Aibrnb</h4>
                                 <p class="mb-0 text-white-50">
-                                    Built a system than generates personalised recommendations for Airbnb users based on sentiment polarity of their and other users' comments.
-                                    For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my <a href="https://medium.com/@alexandra.gg150/how-to-build-a-recommender-system-for-airbnb-in-python-3a92ad500fa5">article on Medium</a>, or this
+                                    Generates personalised recommendations for Airbnb users based on sentiment polarity of their and other users' comments.
+                                    For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my <a href="https://medium.com/@alexandra.gg150/how-to-build-a-recommender-system-for-airbnb-in-python-3a92ad500fa5">article on Medium</a> for a simple implementation, or this
                                     <a href="https://airbnb-bos-polarity.herokuapp.com/">dashboard</a> I created with <i>Streamlit</i> (deployed on <i>Heroku</i>) on estimated sentiment polarity data.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
@@ -122,9 +122,32 @@
             <!-- Project Two Row -->
             <div class="row justify-content-center no-gutters">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/demo-image-02-vid.gif" alt="">
+                    <img class="img-fluid" src="img/image-04.jpg" alt="">
                 </div>
                 <div class="col-lg-6 order-lg-first">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <h4 class="text-white">Tweet Sentiment Extraction: a Question Answering Model with DistilBERT</h4>
+                                <p class="mb-0 text-white-50">
+                                    Uses Hugging Face's DistilBERT Transformer model on a Question Answering task trained on a custom SQuAD-like dataset of tweets to extract
+                                    the words that best supports a positive, negative or neutral sentiment label. Evaluation has so far shown a score of <i>0.7114 </i>(current
+                                    top submission at time of writing is <i>0.724</i>).
+                                    Check out the project so far <a href="https://github.com/alexgastone/ML_projects/blob/master/Tweets_BERT.ipynb">here</a>.
+                                </p>
+                                <hr class="d-none d-lg-block mb-0 mr-0">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Three Row -->
+            <div class="row justify-content-center no-gutters">
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="img/demo-image-02-vid.gif" alt="">
+                </div>
+                <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
@@ -140,12 +163,12 @@
                 </div>
             </div>
 
-            <!-- Project Three Row -->
-            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+            <!-- Project Four Row -->
+            <div class="row justify-content-center no-gutters mb-lg-0">
                 <div class="col-lg-6">
                     <img class="img-fluid" src="img/demo-image-03.jpg" alt="">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
