added ogp metadata

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="author" content="Alexandra Gastone">
     <meta name="keywords" content="Alexandra,Gastone,Guilabert,alexgastone">
 
+    <meta property="og:title" content="Alexandra Gastone's personal projects website" />
+    <meta property="og:image" content="img/preview.jpg" />
+
     <title>Alexandra Gastone Guilabert</title>
 
     <!-- Bootstrap core CSS -->
