edited link to github repo for tweets project

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Tweet Sentiment Extraction: a Question Answering Model with DistilBERT</h4>
                                 <p class="mb-0 text-white-50">
-                                    Uses Hugging Face's DistilBERT Transformer model on a Question Answering task trained on a custom SQuAD-like dataset of tweets to extract
-                                    the words that best supports a positive, negative or neutral sentiment label. Evaluation has so far shown a score of <i>0.7114 </i>(current
+                                    Uses Hugging Face's implemention of the ALBERT Transformer model on a Question Answering task trained on a custom SQuAD-like dataset of tweets to extract
+                                    the words that best support a positive, negative or neutral sentiment label. Currently evaluates to a score of <i>0.7114 </i>(
                                     top submission at time of writing is <i>0.724</i>).
-                                    Check out the project so far <a href="https://github.com/alexgastone/ML_projects/blob/master/Tweets_BERT.ipynb">here</a>.
+                                    Check out the project so far <a href="https://github.com/alexgastone/tweet_extraction/tree/master">here</a>.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 mr-0">
                             </div>
