misc edits to tweet project text

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     Uses Hugging Face's implemention of the ALBERT Transformer model on a Question Answering task trained on a custom SQuAD-like dataset of tweets to extract
                                     the words that best support a positive, negative or neutral sentiment label. Currently evaluates to a score of <i>0.7114 </i>(
                                     top submission at time of writing is <i>0.724</i>).
-                                    Check out the project so far <a href="https://github.com/alexgastone/tweet_extraction/tree/master">here</a>.
+                                    Check out the <a href="https://github.com/alexgastone/tweet_extraction/tree/master">project</a>.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 mr-0">
                             </div>
