misc edits to css project text;

--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                                 <h4 class="text-white">Tweet Sentiment Extraction: a Question Answering Model with DistilBERT</h4>
                                 <p class="mb-0 text-white-50">
                                     Uses Hugging Face's implemention of the ALBERT Transformer model on a Question Answering task trained on a custom SQuAD-like dataset of tweets to extract
-                                    the words that best support a positive, negative or neutral sentiment label. Currently evaluates to a score of <i>0.7114 </i>(
-                                    top submission at time of writing is <i>0.724</i>).
+                                    the words that best support a positive, negative or neutral sentiment label. Currently evaluates to a score of <i>0.7114 </i>(top submission at time of writing is <i>0.724</i>).
                                     Check out the <a href="https://github.com/alexgastone/tweet_extraction/tree/master">project</a>.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 mr-0">
@@ -177,7 +176,7 @@
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Simulations of Auditory, Visual, and Vestibular Sensory Systems</h4>
                                 <p class="mb-0 text-white-50">
-                                    Computer simulations of a cochlear implant, a retinal implant, and a vestibular implant (see <a href="https://github.com/alexgastone/simulations_sensory_systems">Github repo</a>).
+                                    Computer simulations of a cochlear implant, a retinal implant, and a vestibular implant (see <a href="https://github.com/alexgastone/simulations_sensory_systems">Github repo</a>) implemented in Python with a custom-built GUI for each simulation.
                                     Completed in collaboration with colleagues from ETH Zürich.
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
