project title edits

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Recommender System and Sentiment Analysis for Aibrnb</h4>
+                                <h4 class="text-white"> Using Sentiment Analysis on Airbnb reviews for Building a Recommender System</h4>
                                 <p class="mb-0 text-white-50">
                                     Generates personalised recommendations for Airbnb users based on sentiment polarity of their and other users' comments.
                                     For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my <a href="https://medium.com/@alexandra.gg150/how-to-build-a-recommender-system-for-airbnb-in-python-3a92ad500fa5">article on Medium</a> for a simple implementation, or this
@@ -131,7 +131,7 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Tweet Sentiment Extraction: a Question Answering Model with DistilBERT</h4>
+                                <h4 class="text-white">Tweet Sentiment Extraction: a Question Answering Model with ALBERT</h4>
                                 <p class="mb-0 text-white-50">
                                     Uses Hugging Face's implemention of the ALBERT Transformer model on a Question Answering task trained on a custom SQuAD-like dataset of tweets to extract
                                     the words that best support a positive, negative or neutral sentiment label. Currently evaluates to a score of <i>0.7114 </i>(top submission at time of writing is <i>0.724</i>).
