added new project and edited project images

--- a/index.html
+++ b/index.html
@@ -100,16 +100,37 @@
                 </div>
             </div>
 
-            <!-- Project One Row, removed bottom margin mb-5 from div class in line below-->
-            <div class="row justify-content-center no-gutters mb-lg-0">
+            <!-- Project One Row-->
+            <div class="row justify-content-center no-gutters">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+                    <img class="img-fluid" src="img/disaster_pred.gif" alt="">
+                </div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <h4 class="text-white">Disaster Response Classification with BERT</h4>
+                                <p class="mb-0 text-white-50">
+                                    Finetunes a pretrained BERT Transformer model on labeled disaster messages from social, direct, and news sources for multilabel text classification. Using Flask, deployed the model through a web app for real-time inference of user queries. Check out the project repo <a href="https://github.com/alexgastone/disaster_response_multilabel_classification">here</a>.
+                                </p>
+                                <hr class="d-none d-lg-block mb-0 mr-0">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Project Two Row-->
+            <div class="row justify-content-center no-gutters mb-lg-0 mb-5">
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="img/recommend.gif" alt="">
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white"> Using Sentiment Analysis on Airbnb reviews for Building a Recommender System</h4>
+                                <h4 class="text-white">Sentiment Analysis on Airbnb reviews for a Collaborative Recommender System</h4>
                                 <p class="mb-0 text-white-50">
                                     Generates personalised recommendations for Airbnb users based on sentiment polarity of their and other users' comments.
                                     For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my <a href="https://medium.com/@alexandra.gg150/how-to-build-a-recommender-system-for-airbnb-in-python-3a92ad500fa5">article on Medium</a> for a simple implementation, or this
@@ -122,10 +143,10 @@
                 </div>
             </div>
 
-            <!-- Project Two Row -->
+            <!-- Project Three Row -->
             <div class="row justify-content-center no-gutters">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/image-04.jpg" alt="">
+                    <img class="img-fluid" src="img/tweet_sent.gif" alt="">
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
@@ -133,7 +154,7 @@
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Tweet Sentiment Extraction: a Question Answering Model with ALBERT</h4>
                                 <p class="mb-0 text-white-50">
-                                    Uses Hugging Face's implemention of the ALBERT Transformer model on a Question Answering task trained on a custom SQuAD-like dataset of tweets to extract
+                                    Uses Hugging Face's implemention of the ALBERT Transformer model on a Question Answering task fine tuned on a custom SQuAD-like dataset of tweets to extract
                                     the words that best support a positive, negative or neutral sentiment label. Currently evaluates to a score of <i>0.7114 </i>(top submission at time of writing is <i>0.724</i>).
                                     Check out the <a href="https://github.com/alexgastone/tweet_extraction/tree/master">project</a>.
                                 </p>
@@ -144,7 +165,7 @@
                 </div>
             </div>
 
-            <!-- Project Three Row -->
+            <!-- Project Four Row -->
             <div class="row justify-content-center no-gutters">
                 <div class="col-lg-6">
                     <img class="img-fluid" src="img/demo-image-02-vid.gif" alt="">
@@ -165,7 +186,7 @@
                 </div>
             </div>
 
-            <!-- Project Four Row -->
+            <!-- Project Five Row -->
             <div class="row justify-content-center no-gutters mb-lg-0">
                 <div class="col-lg-6">
                     <img class="img-fluid" src="img/demo-image-03.jpg" alt="">
