--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
                                 <h4 class="text-white">Sentiment Analysis on Airbnb reviews for a Collaborative Recommender System</h4>
                                 <p class="mb-0 text-white-50">
                                     Generates personalised recommendations for Airbnb users based on sentiment polarity of their and other users' comments.
-                                    For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my <a href="https://medium.com/@alexandra.gg150/how-to-build-a-recommender-system-for-airbnb-in-python-3a92ad500fa5">article on Medium</a> for a simple implementation, or this
-                                    <a href="https://airbnb-bos-polarity.herokuapp.com/">dashboard</a> I created with <i>Streamlit</i> (deployed on <i>Heroku</i>) on estimated sentiment polarity data.
+                                    For more details, check out my <a href="https://github.com/alexgastone/AirbnbRecommend">Github repo</a>, my <a href="https://medium.com/@alexandra.gg150/how-to-build-a-recommender-system-for-airbnb-in-python-3a92ad500fa5">article on Medium</a> for a simple implementation, this
+                                    <a href="https://airbnb-bos-polarity.herokuapp.com/">dashboard</a> I created with <i>Streamlit</i> (deployed on <i>Heroku</i>) on estimated sentiment polarity data, 
+                                    or this <a href="tableau_rec.html"> Tableau dashboard</a> for polarity and review scores by location.
+
                                 </p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
                             </div>
